--- a/ui/html/components/nav.html
+++ b/ui/html/components/nav.html
@@ -12,6 +12,8 @@
     <!-- Toggle the links based on the authentication status  -->
     {{if .IsAuthenticated}}
     <form action="/user/logout" method="POST">
+      <!-- Include the CSRF token  -->
+      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
       <button>Logout</button>
     </form>
     {{else}}
